--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -17,8 +17,8 @@
 }
 
 .site-icon {
-  width: 10vw;
-  margin-right: 10vw;
+  width: 15vw;
+  /* margin-right: 5vw; */
 } 
 
 .search-form {
@@ -31,7 +31,7 @@
 .search-form>.input-box {
   width: 100%;
   height: 5vh;
-  padding-left: 10px;
+  padding-left: 10px; 
 }
 
 .search-button {
@@ -54,17 +54,25 @@ flex-direction: row-reverse;
 }
 
 
-.user-nickname {
+.user-name {
   text-decoration: none;
-  margin-right: 3vw;
+  background-color: #eeeeee;
+  padding: 8px;
   color: #333333;
-  font-weight: bold;
+  border: 1px solid #333333;
+  text-decoration: none;
+  line-height: 26px;
+  margin: 2vw;
 }
 
 
 .logout {
   text-decoration: none;
+  background-color: #eeeeee;
+  padding: 8px;
   color: #333333;
+  border: 1px solid #333333;
+
 }
 
 .login {
