--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
 <header class='top-page-header'>
   <div class='search-bar-contents'>
       <%# アイコン仮置き %>
-    <%= link_to image_tag("furima-logo-color.png", class:"site-icon"), "/" %>
+    <%= link_to image_tag("lang-logo.jpg", class:"site-icon"), "/" %>
 
     <form class="search-form" action="#">
       <input class='input-box' placeholder='キーワードから探す'>
@@ -11,11 +11,13 @@
       </button>
     </form>
     <ul class='lists-right'>
-
-      <%# <li><%= link_to current_user.nickname, "#", class: "user-nickname" </li> %>
-      <%# <li><%= link_to 'ログアウト', "#", method: :delete, class: "logout" </li> %>
-      <li><%= link_to 'ログイン', "#", class: "login" %></li>
-      <li><%= link_to '新規登録', "#", class: "sign-up" %></li>
+      <% if user_signed_in? %>
+      <li><%= link_to current_user.name, "#", class: "user-name" %></li>
+      <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
+      <% else %>
+      <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
+      <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
+      <% end %>
     </ul>
   </div>
 </header>
