--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,4 @@
  *= require_tree .
  *= require_self
  */
+ @import url("https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@900&family=Oswald:wght@500&display=swap");
