--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -2,95 +2,27 @@
   box-sizing: border-box;
 }
 
-.top-page-header {
+.header {
+ 
+  position: relative;
   width: 100vw;
-  padding: 2vh 5vw;
-  display: flex;
+  height: 100px;
+
   flex-direction: column;
-  background-color: black;
+  background-color: #ffffff;
 }
 
-.search-bar-contents {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.main-bar-contents{
+  position: fixed;
+  width: 100vw;
+  height: 100px;
+
+  flex-direction: column;
+  background-color: #ffffff;
 }
 
 .site-icon {
-  width: 15vw;
+  position: absolute;
+  width: 200px;
   /* margin-right: 5vw; */
 } 
-
-.search-form {
-  width: 30vw;
-  height: 5vh;
-  display: flex;
-  margin-bottom: 5px;
-}
-
-.search-form>.input-box {
-  width: 100%;
-  height: 5vh;
-  padding-left: 10px; 
-}
-
-.search-button {
-  width: 5vh;
-  border: 0;
-  cursor: pointer;
-  background-color: darkviolet;
-  padding: 8px;
-}
-
-.search-icon {
-  width: 100%;
-}
-
-
-.lists-right {
-  display: flex;
-  list-style: none;
-flex-direction: row-reverse;
-}
-
-
-.user-name {
-  text-decoration: none;
-  background-color: #eeeeee;
-  padding: 8px;
-  color: #333333;
-  border: 1px solid #333333;
-  text-decoration: none;
-  line-height: 26px;
-  margin: 2vw;
-}
-
-
-.logout {
-  text-decoration: none;
-  background-color: #eeeeee;
-  padding: 8px;
-  color: #333333;
-  border: 1px solid #333333;
-
-}
-
-.login {
-  text-decoration: none;
-  background-color: #eeeeee;
-  padding: 8px;
-  color: #333333;
-  border: 1px solid #333333;
-  text-decoration: none;
-  line-height: 26px;
-  margin: 2vw;
-}
-
-.sign-up {
-  text-decoration: none;
-  background-color: #eeeeee;
-  padding: 8px;
-  color: #333333;
-  border: 1px solid #333333;
-
-}
