--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,23 +1,9 @@
 <%# CSS・・・assets/stylesheets/shared/header.css %>
-<header class='top-page-header'>
-  <div class='search-bar-contents'>
-      <%# アイコン仮置き %>
-    <%= link_to image_tag("lang-logo.jpg", class:"site-icon"), "/" %>
-
-    <form class="search-form" action="#">
-      <input class='input-box' placeholder='キーワードから探す'>
-      <button class="search-button">
-        <%= image_tag "search.png", class:"search-icon" %>
-      </button>
-    </form>
-    <ul class='lists-right'>
-      <% if user_signed_in? %>
-      <li><%= link_to current_user.name, "#", class: "user-name" %></li>
-      <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
-      <% else %>
-      <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
-      <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
-      <% end %>
-    </ul>
+<header class='header'>
+  <div class='main-bar-contents'> 
+  <p class="title">
+    <%= link_to image_tag("lang-logo.jpg", class:"site-icon"), "/" %> 
   </div>
 </header>
+
+
