--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,10 @@
-<%= render "shared/header" %>
-<div class='main'>
+<%= render 'shared/header'%>
+<%= render 'shared/side_bar'%>
 
-  <%# 画面上部帯部分 %>
-  <div class='title-contents'>
+<div class='title-contents'>
     <h2 class='service-title'>
       Make friends who are from another countries
   </div>
   <%# //画面上部帯部分 %>
 
-
-
-<%# <%= render "shared/footer" %> 
+</div>
