--- a/app/assets/stylesheets/shared/second_header.css
+++ b/app/assets/stylesheets/shared/second_header.css
@@ -1,8 +1,9 @@
 .second-header {
+  position:fixed;
   width: 100%;
   min-width: 800px;
-  height: 130px;
-  background-color: black;
+  height: 90px;
+  background-color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
