--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,24 +18,21 @@
   <div class='form-text-wrap'>
     <%= f.label "名前", class:"form-text"%><br />
     </div>
-    <%= f.text_field :name, autofocus: true, autocomplete: "name", class:"input-default", id:"user-name" %>
+    <%= f.text_field :name, autofocus: true, autocomplete: "name", class:"input-default", id:"user-name",placeholder:" MIKE" %>
   </div>
 
 <div class="form-group">
   <div class='form-text-wrap'>
     <%= f.label "メールアドレス", class:"form-text"%><br />
   </div>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"input-default", id:"user-email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"input-default", id:"user-email",placeholder:" example@example.com" %>
   </div>
 
 <div class="form-group">
   <div class='form-text-wrap'>
     <%= f.label "パスワード", class:"form-text" %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> 文字以上の英数字)</em>
-    <% end %><br />
     </div>
-    <%= f.password_field :password, autocomplete: "new-password",class:"input-default", id:"password" %>
+    <%= f.password_field :password, autocomplete: "new-password",class:"input-default", id:"password", placeholder:" 英数字６文字以上" %>
   </div>
 
 <div class="form-group">
@@ -82,7 +79,7 @@
  <div class='form-text-wrap'>
     <%= f.label "自己紹介", class:"form-text" %><br />
   </div>
-    <%= f.text_area :profile, autofocus: true, class:"input-text", id:"profile" %>
+    <%= f.text_area :profile, autofocus: true, class:"input-text", id:"profile",placeholder:" I'm learning English!" %>
 </div>
 
   <div class="actions">
