--- a/app/assets/stylesheets/user/registration.scss
+++ b/app/assets/stylesheets/user/registration.scss
@@ -2,10 +2,11 @@
 background-color: black;
 }
 .up-form {
-  background-image: image-url('registration.jpg');
+  background-image: image-url('header.jpg');
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
 }
 .title-form {
   display: flex;
@@ -24,17 +25,12 @@ background-color: black;
   background-color:#f0f0f0;
   font-size: 25px;
   color: #000000;
-  font-family: 'M PLUS 1p', sans-serif;
-font-family: 'Oswald', sans-serif;
+  font-family: 'Krona One', sans-serif;
 }
-/* 
-#new_user.new_user{
-  flex-direction: column;
-  align-items: center;
-} */
+
 .new_user {
-  border: 4px double #000000;
-  width: 50%;
+  border: 1px solid #000000;
+  width: 40%;
   align-items: center;
   margin: 100px 80px;
   background-color: #f0f0f0;
@@ -55,9 +51,7 @@ font-family: 'Oswald', sans-serif;
   padding: 5px 15px;
   border: 1px solid black;
   background-color: white;
-  font-family: 'M PLUS 1p', sans-serif;
-font-family: 'Oswald', sans-serif;
-font-size: 30px;
+  font-family: 'Krona One', sans-serif;
 }
 
 #error_explanation{
